fix: Fix the bug that breaks profile name tag or message is cut off when chat message is too long

--- a/src/app/page/group/chat/message/message.component.scss
+++ b/src/app/page/group/chat/message/message.component.scss
@@ -6,6 +6,7 @@
   padding-bottom: 4px;
   padding-left: 4px;
   padding-right: 4px;
+  overflow:hidden;
 
 
   .row {
@@ -15,6 +16,7 @@
 
     .chat {
       display: flex;
+      justify-content: left;
 
       .profile {
         color: #FFFFFF;
@@ -23,7 +25,13 @@
         padding-left: 2px;
         padding-right: 2px;
         margin-right: 8px;
+        height: 20px;
+        white-space: nowrap;
         cursor: pointer;
+      }
+
+      .text {
+        overflow-wrap: anywhere;
       }
     }
     
